--- a/labbar/L3/index.html
+++ b/labbar/L3/index.html
@@ -63,10 +63,13 @@
 	<footer>
 		<p>Laboration L3 i Webbteknik 2</p>
 		<h1>Webbteknik 2</h1>
-		Webbteknik 2, labb 1-3
+		Webbteknik 2, labb 1-6
 		<li><a href="L1/index.html">Labb 1</a></li>
 		<li><a href="L2/index.html"> Labb 2 </a></li>
 		<li><a href="L3/index.html">Labb 3</a></li>
+		<li><a href="L4/index.html"> Labb 4</a></li>
+		<li><a href="L5/index.html"> Labb 5</a></li>
+		<li><a href="L6/index.html"> Labb 6</a></li>
 	</footer>
 </body>
 
